// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConcentrationMatches snapshot matches snapshot with all matches 1`] = `
<DocumentFragment>
  <div
    class="matches"
  >
    <div
      class="matches-header"
    >
      <div
        class="left-text"
      >
        <span
          class="matches-text"
        >
          <span
            class="matches-portion"
          >
            matches: 
          </span>
          <span
            class="matches-portion number"
          >
            12
          </span>
        </span>
        <span
          class="turns-text"
        >
          <span
            class="turns-portion"
          >
            turns: 
          </span>
          <span
            class="turns-portion number"
          >
            00
          </span>
        </span>
      </div>
      <div
        class="right-text"
      >
        <span
          class="time-text"
        >
          <span
            class="time-portion"
          >
            time: 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
          <span
            class="time-portion"
          >
             : 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
          <span
            class="time-portion"
          >
             : 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
        </span>
      </div>
    </div>
    <div
      class="matches-pictures"
    >
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConcentrationMatches snapshot matches snapshot with some matches 1`] = `
<DocumentFragment>
  <div
    class="matches"
  >
    <div
      class="matches-header"
    >
      <div
        class="left-text"
      >
        <span
          class="matches-text"
        >
          <span
            class="matches-portion"
          >
            matches: 
          </span>
          <span
            class="matches-portion number"
          >
            04
          </span>
        </span>
        <span
          class="turns-text"
        >
          <span
            class="turns-portion"
          >
            turns: 
          </span>
          <span
            class="turns-portion number"
          >
            00
          </span>
        </span>
      </div>
      <div
        class="right-text"
      >
        <span
          class="time-text"
        >
          <span
            class="time-portion"
          >
            time: 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
          <span
            class="time-portion"
          >
             : 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
          <span
            class="time-portion"
          >
             : 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
        </span>
      </div>
    </div>
    <div
      class="matches-pictures"
    >
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
      <a
        href="image-link"
      >
        <img
          alt="alt-text"
          src=""
        />
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConcentrationMatches snapshot matches snapshot without matches 1`] = `
<DocumentFragment>
  <div
    class="matches"
  >
    <div
      class="matches-header"
    >
      <div
        class="left-text"
      >
        <span
          class="matches-text"
        >
          <span
            class="matches-portion"
          >
            matches: 
          </span>
          <span
            class="matches-portion number"
          >
            00
          </span>
        </span>
        <span
          class="turns-text"
        >
          <span
            class="turns-portion"
          >
            turns: 
          </span>
          <span
            class="turns-portion number"
          >
            00
          </span>
        </span>
      </div>
      <div
        class="right-text"
      >
        <span
          class="time-text"
        >
          <span
            class="time-portion"
          >
            time: 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
          <span
            class="time-portion"
          >
             : 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
          <span
            class="time-portion"
          >
             : 
          </span>
          <span
            class="time-portion number"
            role="timer"
          >
            00
          </span>
        </span>
      </div>
    </div>
    <div
      class="matches-pictures"
    />
  </div>
</DocumentFragment>
`;
